# User-Interfaces-Group

./: CMakeLists for pollutantoverview.txt  CMakeLists.txt  PCBMonitor.cpp  PCBMonitor.hpp  README.md  UnifiedWidget.cpp  UnifiedWidget.hpp  complianceDashboard.cpp  complianceDashboard.hpp  dashwidge.hpp  datawidge.hpp  main for pollutantoverview.cpp  main.cpp  overviewWidget.cpp  overviewWidget.hpp  pollutantoverviewwidget.cpp  pollutantoverviewwidget.hpp
cwk2 solution/: CMakeLists.txt  dataset.cpp  dataset.hpp  main.cpp  model.cpp  model.hpp  quake.cpp  quake.hpp  stats.cpp  window.cpp  window.hpp
cwk2 solution/daniel/fluorinated_compounds_page/: CMakeLists.txt  line_chart.cpp  window.cpp  window.hpp
cwk2 solution/daniel/physical_pollution_page/: pie_chart.cpp  pie_chart.hpp  window.cpp  window.hpp
cwk2 solution/data/: 1.0_day.csv.schema.json  1.0_day.csv.table.json
cwk2 solution/nadia/: UnifiedWidget.cpp  complianceDashboard.cpp  complianceDashboard.hpp
cwk2 solution/rameesah/: PCBMonitor.hpp  main.cpp
cwk2 solution/tayshan/: dashwidge.cpp  dashwidge.hpp  datawidge.cpp  datawidge.hpp  window.cpp  window.hpp
data/: Y-2024.csv.schema.json
fluorinated_compounds_page/: CMakeLists.txt  info.cpp  info.hpp  line_chart.cpp  line_chart.hpp  main.cpp  window.cpp  window.hpp
physical_pollution_page/: CMakeLists.txt  info.cpp  info.hpp  main.cpp  pie_chart.cpp  pie_chart.hpp  window.cpp  window.hpp
